--- a/Supervised_ML_Algorithms.ipynb
+++ b/Supervised_ML_Algorithms.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f88d95f",
+   "id": "2bd9f4de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c9ff7ee9",
+   "id": "255027b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3491f61d",
+   "metadata": {},
+   "source": [
+    "# Training and Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5e42d6f6",
+   "id": "cce11e5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +51,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59c32fff",
+   "metadata": {},
+   "source": [
+    "# Support Vector Machine Algorithm: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7a58927f",
+   "id": "1472b2db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3f47f6c7",
+   "id": "4d10b7e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc7ca8c5",
+   "id": "2fc1ff51",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "95d138a9",
+   "id": "621d7f03",
    "metadata": {},
    "outputs": [
     {
@@ -113,9 +129,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "063d148b",
+   "metadata": {},
+   "source": [
+    "# Naive Bayes Classifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a999b4a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ee801311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_nb = GaussianNB().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eb164014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+       "       1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0,\n",
+       "       1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = clf_nb.predict(X_test)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c3c94d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9507042253521126"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accuracy for training data\n",
+    "clf_nb.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1a4a9fd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9370629370629371"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accuracy for testing data\n",
+    "clf_nb.score(X_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7449038",
+   "id": "6b577319",
    "metadata": {},
    "outputs": [],
    "source": []
