--- a/Statistics Exam.ipynb
+++ b/Statistics Exam.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c6f1c711",
+   "id": "865ea687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcc57385",
+   "metadata": {},
+   "source": [
+    "# student Id: 0122230053\n",
+    "    0122230053 % 10 == 3, 4th column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9c6fee4a",
+   "id": "7e988ed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e908663a",
+   "id": "f9ad1461",
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1da2fc66",
+   "execution_count": 40,
+   "id": "0af62a6d",
    "metadata": {},
    "outputs": [
     {
@@ -195,19 +204,20 @@
        "Name: thalach, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# mean, max, min, std...\n",
     "df.thalach.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c82db65a",
+   "id": "95b0fe12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4c801b2a",
+   "id": "89b07263",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2373168f",
+   "id": "5a233c00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "df4c5841",
+   "id": "94eee22a",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "59cab41e",
+   "id": "985f442d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ba6d6297",
+   "id": "5cef5a67",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c0a3d026",
+   "id": "6c23f273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "185eed07",
+   "id": "d66e816d",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "10ac932f",
+   "id": "8aa79469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cb94fafc",
+   "id": "4b02f513",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb1611b",
+   "id": "f6908a37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -371,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "361e822b",
+   "id": "9a3671b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ba6b5ab0",
+   "id": "38ded8d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "476be4eb",
+   "id": "12861cad",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "94fdaa78",
+   "id": "4dd1f93a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "aaa41233",
+   "id": "23223c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ef8e3ba8",
+   "id": "993ef0e6",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a58315b3",
+   "id": "df7463dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "edb95bfd",
+   "id": "8c6dfa18",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fe721edb",
+   "id": "eb8adf3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "09648c9a",
+   "id": "eb581841",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8c61f0af",
+   "id": "d1bec7da",
    "metadata": {},
    "outputs": [
     {
@@ -531,13 +541,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4fe3d970",
+   "execution_count": 38,
+   "id": "7d49943d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#range\n"
+    "#range\n",
+    "range_ = df.thalach.max() - df.thalach.min()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "32d4d875",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "131"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d783c77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
